# ICP-homework-practice

./: README.md
src/declarations/example_frontend/: index.js
src/example_backend/: Cargo.toml  example_backend.did
src/example_backend/src/: lib.rs
src/example_frontend/src/: index.html
