[package]
name = "example_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.12.1"
ic-cdk-timers = "0.6"
near-sdk = "5.0.0-alpha.2"  
borsh = "1.3.1"
serde = "1.0.196"
ic-stable-structures = "0.5.4"
chrono ="0.4"
tokio = { version = "1", features = ["full"] }
reqwest ="0.11.23"